updated for networkminer 2.5

--- a/network-miner/Dockerfile
+++ b/network-miner/Dockerfile
@@ -3,20 +3,20 @@
 # docker run -it --rm \
 #	-e DISPLAY=$DISPLAY \ 
 #	-v /tmp/.X11-unix:/tmp/.X11-unix \
-#	-v /home/$USER/Documents/trace:/home/$USER/trace
-#	networkminer
+#	-v /home/$USER/trace:/home/$USER/trace \
+#	network-miner
 #
-FROM fedora:27
+FROM fedora:32
 LABEL maintainer "agaldamez"
 
 # install mono and other required packages
-RUN dnf install -y \ 
-	mono-core \ 
-	mono-basic \ 
-        expect \ 
-        wget \ 
-	unzip \ 
-	gtk2-2.24.31-6.fc27 \
+RUN dnf install -y \  
+	mono-core \
+	mono-basic \
+        expect \
+        wget \
+	unzip \
+	gtk2 \
         PackageKit-gtk3-module \ 
         libcanberra-gtk2 
 
@@ -27,7 +27,7 @@ RUN export PATH=$PATH:/usr/lib64/libgtk-x11-2.0.so.0
 RUN cert-sync /etc/ssl/certs/ca-bundle.crt
 
 # install networkminer
-RUN wget www.netresec.com/?download=NetworkMiner -O /tmp/nm.zip
+RUN wget https://www.netresec.com/?download=NetworkMiner -O /tmp/nm.zip
 RUN unzip /tmp/nm.zip -d /opt/
 RUN cd /opt/NetworkMiner*
 RUN chmod +x /opt/NetworkMiner*/NetworkMiner.exe
