--- a/terraform/Dockerfile
+++ b/terraform/Dockerfile
@@ -16,6 +16,10 @@ RUN apk add --update --no-cache \
 WORKDIR /usr/bin
 
 RUN wget -qO- https://releases.hashicorp.com/terraform/1.0.3/terraform_1.0.3_linux_amd64.zip | busybox unzip - && \
-    chmod 700 terraform
+    chmod 707 terraform
+
+RUN adduser -D terraform 
+
+USER terraform
 
 ENTRYPOINT [ "terraform" ]
